@@ -23,7 +23,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        perl-version: ['5.14', '5.20']
+        perl-version: ['5.16', '5.20']
         include:
           - perl-version: '5.30'
             os: ubuntu-latest
