@@ -1,6 +1,7 @@
 - removed TS::inte (identical to cumusumover)
 - moved TS::diff (unused here) to Ufunc
 - move PDL::Stats::Distr into PDL::GSL since needs GSL
+- minimum 5.16 as some 5.15 broke PDL::Stats (https://github.com/Perl/perl5/issues/11835)
 
 0.84 2024-05-27
 - effect_code exception if only one unique value
